// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video label with a title 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Component
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <IconVideo
      fillColour="#008347"
      height={8}
    />
  </Component>
  <Text
    style={
      Object {
        "color": "#008347",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 12,
        "marginLeft": 5,
        "padding": 0,
        "position": "relative",
        "top": 1,
      }
    }
  >
    SWIMMING
  </Text>
</Component>
`;

exports[`2. video label without a title shows video 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Component
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <IconVideo
      fillColour="#008347"
      height={8}
    />
  </Component>
  <Text
    style={
      Object {
        "color": "#008347",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 12,
        "marginLeft": 5,
        "padding": 0,
        "position": "relative",
        "top": 1,
      }
    }
  >
    VIDEO
  </Text>
</Component>
`;

exports[`3. video label with the black default colour 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Component
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <IconVideo
      fillColour="black"
      height={8}
    />
  </Component>
  <Text
    style={
      Object {
        "color": "black",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 12,
        "marginLeft": 5,
        "padding": 0,
        "position": "relative",
        "top": 1,
      }
    }
  >
    VIDEO
  </Text>
</Component>
`;
